--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+
+
 android {
     compileSdk 32
 
@@ -11,7 +13,7 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        setProperty("archivesBaseName", "TwitterClone-$versionName")
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -38,12 +40,18 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    //implementation files('libs\\twitter4j-core-4.0.3.jar')
-    implementation 'com.twitter.sdk.android:twitter:3.1.1'
-    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
-    implementation 'com.twitter.sdk.android:tweet-ui:3.1.1'
+    implementation files('libs\\twitter4j-core-4.0.3.jar')
+
+    //implementation 'com.github.parse-community:ParseTwitterUtils-Android:1.13.0'
+
+    // implementation 'org.twitter4j:twitter4j-core:4.0.3'
+
+    implementation 'com.twitter.sdk.android:twitter:3.3.0'
+    implementation 'com.twitter.sdk.android:twitter-core:3.3.0'
+    implementation 'com.twitter.sdk.android:tweet-ui:3.3.0'
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation files('libs\\twitter4j-core-4.0.3.jar')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
