--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,10 +41,23 @@ dependencies {
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation files('libs\\twitter4j-core-4.0.3.jar')
+    implementation 'org.apache.httpcomponents:httpclient:4.5'
 
     //implementation 'com.github.parse-community:ParseTwitterUtils-Android:1.13.0'
 
     // implementation 'org.twitter4j:twitter4j-core:4.0.3'
+
+    implementation 'com.amitshekhar.android:android-networking:1.0.2'
+    implementation 'com.artjimlop:altex-image-downloader:0.0.4'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.2.0'
+    implementation 'com.facebook.stetho:stetho:1.3.1'
+    implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
+
+    implementation 'androidx.room:room-runtime:2.4.3'
+    annotationProcessor 'androidx.room:room-compiler:2.4.3'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     implementation 'com.twitter.sdk.android:twitter:3.3.0'
     implementation 'com.twitter.sdk.android:twitter-core:3.3.0'
