--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="14" />
     <application
         android:allowBackup="true"
@@ -38,7 +39,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.twitter.sdk.android.core.identity.OAuthActivity" />
-
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
     </application>
 
 </manifest>
