--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.moutamid.twitterclone">
+    package="com.android.cts.clone">
 
     <uses-sdk
         android:minSdkVersion="7"
@@ -27,16 +27,16 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".FeedActivity"
+            android:name="com.android.cts.clone.FeedActivity"
             android:exported="false" />
         <activity
-            android:name=".FeedScreen"
+            android:name="com.android.cts.clone.FeedScreen"
             android:exported="false" />
         <activity
-            android:name=".DetailsScreen"
+            android:name="com.android.cts.clone.DetailsScreen"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name="com.android.cts.clone.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
