--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     implementation 'com.amitshekhar.android:android-networking:1.0.2'
     implementation 'com.artjimlop:altex-image-downloader:0.0.4'
+    implementation 'com.mindorks.android:prdownloader:0.6.0'
 
     implementation 'com.squareup.okhttp3:okhttp:3.2.0'
     implementation 'com.facebook.stetho:stetho:1.3.1'
