--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,8 +61,12 @@ dependencies {
 
     implementation 'de.hdodenhof:circleimageview:3.1.0'
 
-    implementation 'com.github.bumptech.glide:glide:4.8.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
+    implementation 'com.fxn769:stash:1.3.2'
+
+    implementation 'com.github.bumptech.glide:glide:4.14.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
+
+    implementation 'com.karumi:dexter:6.2.3'
 
     implementation 'com.github.iammannan:TranslateAPI:1.1'
 
