--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,13 +70,15 @@ dependencies {
 
     implementation 'com.github.iammannan:TranslateAPI:1.1'
 
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+
     implementation 'com.twitter.sdk.android:twitter:3.3.0'
     implementation 'com.twitter.sdk.android:twitter-core:3.3.0'
     implementation 'com.twitter.sdk.android:tweet-ui:3.3.0'
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation files('libs\\twitter4j-core-4.0.3.jar')
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation files('libs/twitter4j-core-4.0.3.jar')
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.4'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
 }
