--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,9 @@
             android:name="com.android.cts.clone.FeedActivity"
             android:exported="false" />
         <activity
+            android:name="com.android.cts.clone.ViewPagerActivity"
+            android:exported="false" />
+        <activity
             android:name="com.android.cts.clone.FeedScreen"
             android:exported="false" />
         <activity
