--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,14 +33,15 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
     useLibrary 'org.apache.http.legacy'
+    namespace 'com.android.cts.clone'
 }
 
 dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation files('libs\\twitter4j-core-4.0.3.jar')
+    implementation files('libs/twitter4j-core-4.0.3.jar')
     // implementation 'org.apache.httpcomponents:httpclient:4.5'
     implementation 'cz.msebera.android:httpclient:4.5.8'
 
@@ -52,7 +53,7 @@ dependencies {
     implementation 'com.artjimlop:altex-image-downloader:0.0.4'
     implementation 'com.mindorks.android:prdownloader:0.6.0'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.2.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.facebook.stetho:stetho:1.3.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
 
