--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.artjimlop:altex-image-downloader:0.0.4'
     implementation 'com.mindorks.android:prdownloader:0.6.0'
 
+    implementation 'org.apache.commons:commons-lang3:3.12.0'
+
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
     implementation 'com.facebook.stetho:stetho:1.3.1'
     implementation 'com.facebook.stetho:stetho-okhttp3:1.3.1'
